--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "node": "6.* || 8.* || >= 10.*"
   },
   "dependencies": {
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "microstates": "^0.12.0"
+    "@microstates/ember": "^0.12.0",
+    "babel-plugin-transform-class-properties": "^6.24.1"
   }
 }
